# tato

./: .gitignore  Cargo.toml  MIGRATION_GUIDE.md  README.md  build.rs  readme.md  rustfmt.toml  target  target 2  todo.md
_dev/: atlas.md  default_tiles.aseprite  font_bold_short.aseprite  gui-001.ase  patch-001.ase  scene.md  tileset.md
_dev/_unused/: anim.md  atlas.md  tilemap.md
_dev/art/: logo.aseprite  raid.aseprite  raid_02.aseprite  raid_03.aseprite  test_pattern_01.aseprite
_dev/default/: default_tiles.aseprite  default_tiles_02.aseprite
_dev/gui/: patch-001.ase
_dev/screenshots/: Screen Recording 2024-03-19 at 11.12.13 PM.mov
_shared_game/: Cargo.toml
_shared_game/src/: data.rs  lib.rs  random.rs  scn_scrolling.rs  scn_simple.rs  scn_simplest.rs
_unused/: palette.rs  rect.rs  tile_bank.rs  tile_map.rs
_unused/arenas/: fixed_arena.rs  slicemap.rs
assets/: test.ase
audio/src/: channel.rs  iter.rs  note.rs
basic_game/: Cargo.toml
basic_game/src/: lib.rs
cpal/: Cargo.toml
crates/arena/: ARENAREF_BORROWING.md  Cargo.toml  README.md  TAIL_ALLOCATION_IMPLEMENTATION.md
crates/arena/examples/: README.md  automatic_safety.rs  basic_usage.rs  clean_api.rs  generation_limitations.rs  generational_safety.rs  generic_storage.rs  marker_safety.rs  memory_optimization.rs  pool_demo.rs  safety_features.rs  smaller_indices.rs  tail_allocation_demo.rs  test_arena_ref.rs  video_chip.rs
crates/arena/src/: arena.rs  arena_ops.rs  arena_ref.rs  buffer.rs  fillable_pool.rs  id.rs  lib.rs  pool.rs  ring_buffer.rs  slice.rs  tests.rs  text.rs  typed_arena.rs
crates/arena/src/_unused/: typed_arena.rs
crates/arena/src/buffer/: drain.rs
crates/arena/src/ring_buffer/: iter.rs
crates/arena/src/tests/: arena.rs  arena_ref.rs  arena_ref_borrowing.rs  edge_cases.rs  iterators.rs  mod.rs  pool.rs  raw_id.rs  ring_buffer.rs  slice.rs  tail_allocation.rs  text.rs  text_tail_allocation.rs  unsafe_ops.rs
crates/arena/src/text/: debug_buffer.rs
crates/audio/: .gitignore  Cargo.toml  todo.md
crates/avgbuffer/: Cargo.toml
crates/backend_cpal/: Cargo.toml
crates/backend_dummy/: Cargo.toml
crates/backend_macroquad/: COMPARISON.md  Cargo.toml  README.md
crates/backend_raylib/: Cargo.toml
crates/backend_winit/: Cargo.toml
crates/collision/: Cargo.toml
crates/dashboard/: Cargo.toml
crates/layout/: Cargo.toml  readme.md
crates/math/: Cargo.toml
crates/pad/: Cargo.toml  LICENSE
crates/pad/src/: apad.rs  dpad.rs  lib.rs
crates/pipeline/: Cargo.toml
crates/rng/: Cargo.toml
crates/smooth_buffer/: Cargo.toml
crates/temp_arena/: Cargo.toml
crates/video/: Cargo.toml  todo.md
crates/video/_unused/: iter_experimental.rs
crates/video/src/: bank.rs  bank_colors.rs  bank_tiles.rs  bg_map.rs  cell.rs  cluster.rs  color.rs  error.rs  iter.rs  lib.rs  palette.rs  sprite.rs  tile.rs  tile_flags.rs  tilemap.rs  tilemap_ref.rs  video_bank.rs  video_chip.rs  video_mem.rs
crates/video/src/color/: color_12bit.rs  rgba12.rs  rgba32.rs
demo_bugs/: Cargo.toml
demo_bugs/src/: init.rs  main.rs  specs.rs  update.rs
demo_collisions/: Cargo.toml
demo_collisions/src/: main.rs
demo_pattern/: Cargo.toml  build.rs
demo_pattern/src/: main.rs  specs.rs
demo_ponck/: Cargo.toml  build.rs
demo_ponck/_dev/: bricks_003.aseprite  title_001.aseprite
demo_ponck/src/: init.rs  main.rs  specs.rs  update.rs
example_basic/: Cargo.toml
example_basic/src/: main.rs
example_mquad/: Cargo.toml
example_mquad/src/: main.rs
example_sdl/: Cargo.toml
example_sdl/src/: main.rs
examples/: pool_demo.rs  smaller_indices.rs  video_chip.rs
examples/anim/: Cargo.toml  build.rs
examples/anim_mquad/: Cargo.toml  build.rs
examples/anim_mquad/src/: astro.rs  main.rs
examples/anim_mquad/src/assets/: astro.rs
examples/audio/: Cargo.toml
examples/audio/src/: backend_cpal.rs  backend_raylib.rs  main.rs  wave_writer.rs
examples/demo/: Cargo.toml
examples/font/: Cargo.toml  build.rs
examples/layers/: Cargo.toml
examples/matrix/: Cargo.toml
examples/mquad/: Cargo.toml
examples/palette_save/: Cargo.toml  rgb_512_colors.gpl
examples/pipe/: Cargo.toml  build.rs
examples/scenes/: Cargo.toml  target
examples/scenes/src/: backend_raylib.rs  data.rs  main.rs  scene_a.rs  scene_b.rs  scene_c.rs
examples/sdl/: Cargo.toml
examples/tilemap/: Cargo.toml  build.rs
examples/videochip/: Cargo.toml
import/: .tato_metadata
layout/: Cargo.toml
layout/example_sdl/: Cargo.toml
layout/src/: lib.rs
math/: Cargo.toml
math/src/: lib.rs
pad/src/: dpad.rs
pipeline/: Cargo.toml
pipeline/src/: pipeline.rs
raylib/: .gitignore  Cargo.toml
raylib/src/: lib.rs
src/: anim.rs  apad.rs  assets.rs  backend.rs  bg.rs  bg_map.rs  button.rs  channel.rs  cluster.rs  code_gen.rs  color.rs  dashboard.rs  data.rs  debug_ui.rs  dpad.rs  error.rs  font.rs  frame.rs  graphics.rs  id.rs  iter.rs  layout.rs  lib.rs  math.rs  note.rs  notes.rs  num.rs  pipeline.rs  pixels.rs  pool.rs  rect.rs  rng.rs  scanline.rs  sprite.rs  sprite_grid.rs  tato.rs  test.rs  tests.rs  text.rs  tile.rs  (+9 more)
src/_unused/: chars.rs  int.rs  keychain.rs  layer.rs  pool.rs  scanline.rs  specs.rs  sprite_grid.rs  tile_flags.rs  tile_iter.rs
src/arenas/: arena.rs  mod.rs
src/assets/: anim.rs  bg_map_ref.rs  color_entry.rs  palette.rs  tilemap.rs  tilemap_entry.rs  tilemap_ref.rs  tileset.rs
src/basic/: _basic.rs  bit_flags.rs  block_pool.rs  (+10 more)
tato_mquad/: Cargo.toml
template_mquad/: Cargo.toml
test/: output.rs
test_bricks/: .gitignore  Cargo.toml  build.rs
test_bricks/_dev/: bricks_001.aseprite  bricks_002.aseprite  bricks_004.aseprite
test_bricks/assets/converted/: atlas  atlas.anims  atlas.maps
test_bricks/src/: gameplay.rs  ids.rs  init.rs  input.rs  main.rs  specs.rs  update.rs
test_bugs/: Cargo.toml  build.rs
test_bugs/_dev/: bugs_001.aseprite
test_bugs/src/: actors.rs  game.rs  grid.rs  init.rs  main.rs  specs.rs  update.rs
test_collisions/: Cargo.toml
test_pattern/: .gitignore  Cargo.toml  build.rs
test_pattern/src/: main.rs
video/: .gitignore  Cargo.toml
(+259 files in other folders)
