[package]
name = "tato"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "A ridiculously obsolete collection of zero-dependency game development modules that can run on any computer, even potato-powered ones!"
repository = "https://github.com/DoctorWhoof/tato"
categories = ["no-std"]

[dependencies]
tato_pad = { path = "crates/pad" }
tato_layout = { path = "crates/layout" }
tato_audio = { path = "crates/audio" }
tato_video = { path = "crates/video" }
tato_math = { path = "crates/math" }
smooth-buffer = { path = "../smooth_buffer" }
# tato_arena = { path = "arena" }

[build-dependencies]
tato_pipe = { path = "crates/pipeline" }

[workspace]
members = [
    "examples/scenes",
    "examples/audio",
    "examples/font",
    "examples/tilemap",
    "examples/palette_save",
    # "examples/pipe",
]
