[package]
name = "tato"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "A ridiculously obsolete collection of zero-dependency game development modules that can run on any computer, even potato-powered ones!"
repository = "https://github.com/DoctorWhoof/tato"
categories = ["no-std"]

[dependencies]
tato_pad = { path = "crates/pad" }
tato_layout = { path = "crates/layout" }
tato_audio = { path = "crates/audio" }
tato_video = { path = "crates/video" }
tato_math = { path = "crates/math" }
tato_rng = { path = "crates/rng" }
tato_arena = { path = "crates/arena" }
tato_collision = { path = "crates/collision" }
avgbuffer = { path = "crates/avgbuffer" }

[build-dependencies]
tato_pipe = { path = "crates/pipeline" }

[workspace]
members = [
    "examples/scenes",
    "examples/audio",
    "examples/font",
    "examples/tilemap",
    "examples/palette_save",
    "examples/anim",
    # "crates/backend_macroquad",
]

exclude = [
    "crates/layout/example_basic",
    "crates/layout/example_mquad",
    "crates/layout/example_sdl",
]

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
