[package]
name = "demo_ponck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
tato = { path = "../", features = ["std"] }
tato_mquad = { path = "../tato_mquad" }

[build-dependencies]
tato = { path = "../", features = ["std"] }
tato_pipe = { path = "../../tato_pipe" }
