[package]
name = "test_bricks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
spud = { path = "../", features = ["std"] }

[build-dependencies]
spud = { path = "../", features = ["std"] }
spud_pipeline = { path = "../../spud_pipeline" }
