[package]
name = "test_bugs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spud = { path = "../", features = ["std"] }
macroquad = "0.4.4"

[build-dependencies]
spud = { path = "../", features = ["std"] }
spud_pipeline = { path = "../../spud_pipeline" }