[package]
name = "test_bugs"
version = "0.1.0"
edition = "2021"

[dependencies]
tato = { path = "../", features = ["std"] }
macroquad = "0.4.4"
tato_mquad = { path = "../tato_mquad" }

[build-dependencies]
tato = { path = "../", features = ["std"] }
# tato_pipe = "0.1.2"
tato_pipe = { path = "../../tato_pipe" }
