[package]
name = "anim_mquad"
version = "0.1.0"
edition = "2024"

[dependencies]
tato = { path = "../../" }
tato_macroquad = { path = "../../crates/backend_macroquad" }
# tato_winit = { path = "../../crates/backend_winit" }

[build-dependencies]
tato_pipe = { path = "../../crates/pipeline" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
