[package]
name = "scenes"
version = "0.1.0"
edition = "2024"

[dependencies]
tato = { path = "../../"}
rand = {version = "0.9.0" }
tato_raylib = { path = "../../raylib"}

# For audio debugging
# hound = "3.5.1"
# cpal = "0.15.3"

## Other backends, currently not used
# mini_sdl = { path = "../../../mini_sdl"}
