[package]
name = "scenes"
version = "0.1.0"
edition = "2024"

[dependencies]
tato = { path = "../../"}
rand = {version = "0.9.0" }
tato_raylib = { path = "../../crates/backend_raylib"}

[profile.release]
# debug = true
opt-level = 3
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization at cost of compile time
panic = "abort"     # Smaller binaries, faster code
